# doql

./: .coverage  .gitignore  .gitlab-ci.yml  CHANGELOG.md  GLOSSARY.md  Jenkinsfile  LICENSE  OQLOS-REQUIREMENTS.md  PARSER_AUDIT.md  README.md  ROADMAP.md  SPEC.md  SUMD.md  SUMR.md  TODO.md  Taskfile.testql.yml  Taskfile.yml  app.doql.css  app.doql.less  doql.sh  goal.yaml  local.dev.txt  package-lock.json  project.sh  pyproject.toml  pyqual.yaml  sumd.json  test_all_desktop.yml  test_desktop_builds.yml  test_playbook.yml  tree.txt
.github/workflows/: ci.yml
.redeploy/state/: infra-local-9dd2f59b.yaml
TODO/: 01-doql-format-migration-analysis.md  02-doql-css-iot-fleet-example.md  03-doql-less-calibration-lab-example.md  04-doql-sass-notes-app-example.md  05-doql-migration-guide.md  README.md
analysis-20260421/doql_playground/: analysis.toon.yaml  context.md
analysis/doql_playground/: analysis.toon.yaml
articles/: 01-oqlos-status-2026-q2.md  02-testql-status-2026-q2.md  03-saas-www-status-2026-q2.md  04-doql-ogloszenie.md  05-wizja-ekosystemu-oqlos.md  06-doql-v02-dokumenty-kiosk.md  README.md
code2llm_output/doql_playground/: analysis.toon.yaml  context.md  evolution.toon.yaml  flow.toon.yaml
code2llm_output/plugins/: context.md  evolution.toon.yaml  flow.toon.yaml
docs/: README.md  refactoring-plan.md
docs/doql_playground/: analysis.toon.yaml  context.md  evolution.toon.yaml
docs/plugins/: context.md
doql/: __init__.py  cli.py  digital_twin.py  lsp_server.py  parser.py  plugins.py  workflows.py
doql/adopt/: __init__.py  device_scanner.py  emitter.py  scanner.py
doql/cli/: __init__.py  __main__.py  build.py  context.py  lockfile.py  main.py  sync.py
doql/drift/: __init__.py  detector.py
doql/exporters/: __init__.py  css_exporter.py  markdown_exporter.py  yaml_exporter.py
doql/generators/: __init__.py  api_gen.py  ci_gen.py  deploy.py  desktop_gen.py  docs_gen.py  document_gen.py  export_postman.py  export_ts_sdk.py  i18n_gen.py  infra_gen.py  integrations_gen.py  mobile_gen.py  report_gen.py  vite_gen.py  web_gen.py  workflow_gen.py
doql/importers/: __init__.py  oql_converter.py  yaml_importer.py
doql/integrations/: __init__.py  op3_bridge.py
doql/lsp_server/: __init__.py  completion.py  definition.py  diagnostics.py  hover.py  symbols.py  utils.py
doql/parsers/: __init__.py  blocks.py  css_mappers.py  css_parser.py  css_tokenizer.py  css_transformers.py  css_utils.py  extractors.py  models.py  registry.py  validators.py
doql/utils/: __init__.py  clean.py  naming.py
examples/: EXAMPLES-TEST-REPORT.md  SUMD.md  SUMR.md  Taskfile.yml  calibration-lab.doql.css  crm-contacts.doql.css  digital-twin-self.doql.css  document-generator.doql.css  iot-fleet.doql.css  kiosk-station.doql.css  notes-app.doql.css  sumd.json
examples/asset-management/: .env.example  README.md  Taskfile.yml  app.doql  app.doql.css  app.doql.less
examples/blog-cms/: README.md  Taskfile.yml  app.doql  app.doql.css  app.doql.less  (+1 more)
playground/: README.md  app.js  doql-0.0.1-py3-none-any.whl  doql-0.0.2-py3-none-any.whl  doql-0.0.3-py3-none-any.whl  doql-0.1.0a1-py3-none-any.whl  doql-0.1.1-py3-none-any.whl  doql-0.1.10-py3-none-any.whl  doql-0.1.11-py3-none-any.whl  doql-0.1.12-py3-none-any.whl  doql-0.1.2-py3-none-any.whl  doql-0.1.3-py3-none-any.whl  doql-0.1.4-py3-none-any.whl  doql-0.1.5-py3-none-any.whl  doql-0.1.6-py3-none-any.whl  doql-0.1.7-py3-none-any.whl  doql-0.1.8-py3-none-any.whl  doql-0.1.9-py3-none-any.whl  doql-1.0.1-py3-none-any.whl  doql-1.0.2-py3-none-any.whl  doql-1.0.3-py3-none-any.whl  doql-1.0.4-py3-none-any.whl  doql-1.0.5-py3-none-any.whl  doql-1.0.6-py3-none-any.whl  doql-1.0.7-py3-none-any.whl  doql-1.0.8-py3-none-any.whl  doql-1.0.9-py3-none-any.whl  doql_build.py  index.html  pyodide-bridge.js  renderers.js  serve.sh  style.css
plugins/doql-plugin-erp/: README.md  SUMD.md  SUMR.md  app.doql.less  local.dev.txt  pyproject.toml  sumd.json
plugins/doql-plugin-erp/doql_plugin_erp/: __init__.py
plugins/doql-plugin-erp/project/: map.toon.yaml
plugins/doql-plugin-fleet/: README.md  SUMD.md  SUMR.md  app.doql.less  local.dev.txt  pyproject.toml  sumd.json
plugins/doql-plugin-fleet/doql_plugin_fleet/: __init__.py  device_registry.py  metrics.py  migration.py  ota.py  tenant.py
plugins/doql-plugin-fleet/project/: map.toon.yaml
plugins/doql-plugin-gxp/: README.md  SUMD.md  SUMR.md  app.doql.less  local.dev.txt  pyproject.toml  sumd.json
plugins/doql-plugin-gxp/doql_plugin_gxp/: __init__.py
plugins/doql-plugin-gxp/project/: map.toon.yaml
plugins/doql-plugin-iso17025/: README.md  SUMD.md  SUMR.md  app.doql.less  local.dev.txt  pyproject.toml  sumd.json
plugins/doql-plugin-iso17025/doql_plugin_iso17025/: __init__.py  certificate.py  drift_monitor.py  migration.py  traceability.py  uncertainty.py
plugins/doql-plugin-iso17025/project/: map.toon.yaml
plugins/doql-plugin-shared/: SUMD.md  SUMR.md  app.doql.less  pyproject.toml  sumd.json
plugins/doql-plugin-shared/doql_plugin_shared/: __init__.py
plugins/doql-plugin-shared/project/: map.toon.yaml
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt  validation.toon.yaml
testql-scenarios/: generated-api-smoke.testql.toon.yaml  generated-from-pytests.testql.toon.yaml
tests/: env_manager.py  playground_e2e.py  runtime_all_examples.sh  runtime_deploy.sh  runtime_smoke.py  test_adopt.py  test_css_parser.py  test_deploy.py  test_digital_twin.py  test_exporters.py  test_exporters_shims.py  test_generators.py  test_lockfile.py  test_lsp.py  test_oql_converter.py  test_parser.py  test_parser_benchmark.py  test_plugins.py  test_runtime.py  test_tooling_packages.py  test_topology_command.py  test_workflows.py  test_workspace.py
vscode-doql/: README.md  SUMD.md  SUMR.md  app.doql.less  language-configuration.json  local.dev.txt  package-lock.json  package.json  sumd.json
(+184 files in other folders)
