[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doql"
version = "1.0.43"
description = "Declarative OQL — build complete applications from a single .doql file"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Softreck", email = "hello@softreck.dev" },
    {name = "Tom Sapletta", email = "tom@sapletta.com"},
]
keywords = ["dsl", "code-generation", "oqlos", "low-code", "saas", "asset-management"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
]
dependencies = [
  "click>=8.1",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "jinja2>=3.1",
  "rich>=13.0",
  "httpx>=0.25",
  "goal>=2.1.0",
  "costs>=0.1.20",
  "pfix>=0.1.60",
  "testql>=0.1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio",
  "pytest-cov>=4.0",
  "ruff",
  "mypy",
  "goal>=2.1.0",
  "costs>=0.1.20",
  "pfix>=0.1.60",
  "doql-plugin-gxp",
  "doql-plugin-iso17025",
  "doql-plugin-fleet",
  "doql-plugin-erp",
  "doql-plugin-shared",
  "mcp2doql",
  "cli2doql",
  "dsl2doql",
  "nlp2doql",
  "uri2doql",
]
api = [
  "fastapi>=0.104",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
]
lsp = [
  "pygls>=1.3",
  "lsprotocol>=2023.0.1",
]
deploy = [
  "redeploy>=0.2.1,<0.3.0",
]
device-adopt = [
  "op3>=0.1.8",
]
tooling = [
  "mcp2doql",
  "cli2doql",
  "dsl2doql",
  "nlp2doql",
  "uri2doql",
]

[dependency-groups]
dev = [
  "pytest>=7.4",
  "pytest-asyncio",
  "pytest-cov>=4.0",
  "ruff",
  "mypy",
  "goal>=2.1.0",
  "costs>=0.1.20",
  "pfix>=0.1.60",
  "doql-plugin-gxp",
  "doql-plugin-iso17025",
  "doql-plugin-fleet",
  "doql-plugin-erp",
  "doql-plugin-shared",
  "mcp2doql",
  "cli2doql",
  "dsl2doql",
  "nlp2doql",
  "uri2doql",
]

[project.scripts]
doql = "doql.cli:main"
doql-lsp = "doql.lsp_server:main"

[project.urls]
Homepage = "https://github.com/softreck/doql"
Documentation = "https://doql.dev"
Repository = "https://github.com/softreck/doql"
Issues = "https://github.com/softreck/doql/issues"
Changelog = "https://github.com/softreck/doql/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["doql*"]

[tool.setuptools.package-data]
# Ship scaffold templates (app.doql, .env.example, …) with the wheel so
# `doql init --template <name>` works after `pip install doql`.
doql = [
  "scaffolds/**/*",
  "scaffolds/**/.*",
]

[tool.uv.workspace]
members = [
  ".",
  "plugins/doql-plugin-gxp",
  "plugins/doql-plugin-iso17025",
  "plugins/doql-plugin-fleet",
  "plugins/doql-plugin-erp",
  "plugins/doql-plugin-shared",
  "packages/nlp2doql",
  "packages/uri2doql",
  "packages/mcp2doql",
  "packages/cli2doql",
  "packages/dsl2doql",
]

[tool.uv.sources]
doql = { workspace = true }
doql-plugin-gxp = { workspace = true }
doql-plugin-iso17025 = { workspace = true }
doql-plugin-fleet = { workspace = true }
doql-plugin-erp = { workspace = true }
doql-plugin-shared = { workspace = true }
nlp2doql = { workspace = true }
uri2doql = { workspace = true }
mcp2doql = { workspace = true }
cli2doql = { workspace = true }
dsl2doql = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = [
  "lsprotocol.*",
  "opstree.*",
  "pygls.*",
  "redeploy.*",
  "taskfile.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["doql.lsp_server.*"]
# pygls feature decorators are untyped when the optional LSP extra is absent.
disallow_untyped_decorators = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
# `tests/runtime_smoke.py` is a script, not a pytest module — it connects to
# a running server on :8766. Exclude it from collection.
python_files = ["test_*.py"]
addopts = "-ra --tb=short"

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
