[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doql-plugin-gxp"
version = "0.1.0"
description = "21 CFR Part 11 / EU Annex 11 compliance for doql — audit log, e-signatures, immutability"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Softreck", email = "hello@softreck.dev" },
]
keywords = ["doql", "gxp", "21-cfr-part-11", "audit-log", "compliance"]
dependencies = [
  "doql>=0.1.0a1",
]

[project.entry-points."doql_plugins"]
gxp = "doql_plugin_gxp:generate"

[tool.setuptools.packages.find]
include = ["doql_plugin_gxp*"]
